@@ -11,6 +11,7 @@
   cross-fade on the change of filter characteristics.
 * Implemented functions for converting the frequency to a note.
 * Added test build for Windows using MSYS2.
+* Updated build scripts.
 
 === 1.0.8 ===
 * Added MIDI note to frequency convertion function dspu::midi_note_to_frequency.
